cabal-version:       2.4
name:                xml-prettify-text
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/MrcJkb/xml-prettify-text
bug-reports:         https://github.com/MrcJkb/xml-prettify-text/issues
license:             GPL-2.0-only
license-file:        LICENSE
author:              Marc Jakobi
maintainer:          Marc Jakobi <mrcjkb89@outlook.com>
copyright:           2021 Marc Jakobi
category:            Efficient XML pretty-printer
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3
data-files:
    data/tests/prettyPrintTest.out.golden
    data/tests/prettyPrintTest.xml

source-repository head
  type:                git
  location:            https://github.com/MrcJkb/xml-prettify-text.git
common common-options
  build-depends:       base ^>= 4.13.0.0
                     , protolude ^>= 0.2.4
  
  mixins:              base hiding (Prelude)
                     , protolude (Protolude as Prelude)
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Text.XML.Prettify
                     , Text.XML.Prettify.Options
  build-depends:       base ^>= 4.13.0.0
                     , text ^>= 1.2.4.0
                     , text-show ^>= 3.8.5
                     , mtl ^>= 2.2.2
executable xml-prettify
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       xml-prettify-text
                     , text ^>= 1.2.4.0
                     , optparse-applicative ^>= 0.15.1.0
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
test-suite xml-prettify-text-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       
                       PrettyPrintGoldenTest
  build-depends:       xml-prettify-text
                     , tasty ^>= 1.2.3
                     , tasty-golden ^>= 2.3.3
                     , text ^>= 1.2.4.0
                     , filepath ^>= 1.4.2.1
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
benchmark xml-prettify-text-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , xml-prettify-text
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
